tests/semantic_errors/sasha10_3.tl
-- test case 10.
-- Description : more repuntil, but with an error

-- Expected : '3'
require "ifj21" 
 function me() :string end  function yours() : string  repeat  repeat  repeat  repeat  repeat  repeat  local me : string = "arst" until  true  until  true  until  true  until  true  until  true  until  true  return you end 
